--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,9 +8,9 @@ on:
 
 
 env:
-  AZURE_WEBAPP_NAME: webAppAction-wes    # set this to your application's name
+  AZURE_WEBAPP_NAME: felixteste    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '3.1.201'   
+  DOTNET_VERSION: '5.0.408'   
 
 jobs:
   build:
