--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,16 +1,16 @@
-name: .NET
+
+name: .NET Core
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "main" ]
-
+    branches: [ master ]
 
 env:
   AZURE_WEBAPP_NAME: felixteste    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '5.0.408'   
+  DOTNET_VERSION: '5.0.408'           # set this to the dot net version to use
 
 jobs:
   build:
@@ -18,11 +18,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 3.1.101
     - name: Install dependencies
       run: dotnet restore
     - name: Build and Publish
@@ -35,8 +35,8 @@ jobs:
       with:
         name: artifact
         path: output/
-      
-       # Deploy to Azure Web apps
+
+    # Deploy to Azure Web apps
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with: 
